syntax = "proto3";

package taas_proto;

option go_package = "./taas_proto";

import "transaction.proto";
import "node.proto";

message ClientReadRequest {
  string client_ip = 1;
  uint64 txn_id = 2;
  repeated Row rows = 3;
}

message ClientReadResponse {
  Result result = 1;
  uint64 txn_id = 2;
  repeated Row rows = 3;
}
